libs/node/test/data/SMSHOME2/bad/bad10.ecf

 
# test for uneven number for microcharacter's
 
%ecfmicro £
sleep £SLEEPTIME
